--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 body{
     text-align: center;
+     background-color: #fde0e6;
+     background-image: linear-gradient(to bottom right, #fde0e6, #e0eaff);
+    font-family: "Bangers", system-ui;
+    font-weight: 400;
+    font-style: normal;
 }
 .btn {
     height: 200px;
@@ -27,4 +32,21 @@ body{
 }
 .flash{
     background-color: white;
+}
+#startbtn {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #fff;
+    background-color: #191970;
+    border: 2px solid #191970; 
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s, border-color 0.3s;
+}
+#startbtn:hover {
+    background-color:  #000080; 
+    border-color:  #000080;
 }
